--- a/Contact.html
+++ b/Contact.html
@@ -45,7 +45,8 @@
           </div>
         </div>
         <div class="contact-right">
-          <form action="">
+          <form action="https://api.web3forms.com/submit" method="POST">
+            <input type="hidden" name="access_key" value="67fae4a6-82c8-4e49-87f5-8167cce3b65e">
             <div>
               <label for="name">Name</label>
             <input id="name" type="text" name="name">
